--- a/firstProject/css/menu.scss
+++ b/firstProject/css/menu.scss
@@ -155,6 +155,7 @@ purple {
   &__inner {
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
 
   &__logo {
@@ -623,18 +624,39 @@ purple {
   }
 
   &__list {
+    &-wrapper {
+      border-bottom: 1px solid rgba(173, 173, 173, 1);
+      padding: 20px 0;
+    }
+
     &-item {
       display: flex;
       align-items: center;
       justify-content: space-between;
+      position: relative;
 
       font-size: 23px;
       font-weight: 600;
       line-height: 59px;
       letter-spacing: 0em;
       text-align: left;
-      border-bottom: 1px solid rgba(173, 173, 173, 1);
+
+      & img {
+        &:hover {
+          cursor: pointer;
+        }
+      }
+    }
+
+    &-hiddentext {
+      font-size: 20px;
+      font-weight: 400;
+      line-height: 32px;
+      color: rgba(104, 104, 104, 1);
+      display: block;
+      max-width: 900px;
       padding: 20px 0;
+      display: none;
     }
   }
 }
