--- a/firstProject/css/style.css
+++ b/firstProject/css/style.css
@@ -141,6 +141,9 @@ purple {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .header__logo {
   font-weight: 600;
