--- a/firstProject/css/menu.css
+++ b/firstProject/css/menu.css
@@ -229,6 +229,9 @@ purple {
 .header__link:hover:after {
   width: 100%;
 }
+.header__registration-link {
+  text-decoration: none;
+}
 
 .weekend {
   margin-top: 270px;
