--- a/firstProject/css/style.css
+++ b/firstProject/css/style.css
@@ -209,6 +209,9 @@ purple {
 .header__link:hover:after {
   width: 100%;
 }
+.header__registration-link {
+  text-decoration: none;
+}
 
 .application {
   padding-top: 100px;
