--- a/firstProject/css/style.css
+++ b/firstProject/css/style.css
@@ -65,6 +65,17 @@ purple {
   color: rgb(92, 78, 174);
 }
 
+.notification {
+  width: 300px;
+  height: 80px;
+  position: fixed;
+  bottom: 50px;
+  left: 50px;
+  border-radius: 15px;
+  z-index: 9999;
+  background-color: rgb(81, 199, 128);
+}
+
 .card {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -806,7 +817,7 @@ purple {
   content: "";
   position: relative;
   height: 10px;
-  margin-top: 10px;
+  margin-top: 30px;
   background-color: rgba(251, 172, 24, 0.2);
   border-radius: 78.53px;
 }
