--- a/firstProject/css/style.css
+++ b/firstProject/css/style.css
@@ -916,7 +916,7 @@ purple {
   gap: 35px;
   border-radius: 30px;
   position: relative;
-  left: -535px;
+  right: 0px;
 }
 
 .item__header {
@@ -970,7 +970,7 @@ purple {
   position: relative;
   background-color: rgb(108, 95, 188);
   height: 10px;
-  width: 233px;
+  width: 100px;
   border-radius: 78.53px;
 }
 
