--- a/firstProject/css/style.scss
+++ b/firstProject/css/style.scss
@@ -858,7 +858,7 @@ purple {
       gap: 35px;
       border-radius: 30px;
       position: relative;
-      left: -535px;
+      right: 0px;
     }
   }
 }
@@ -913,7 +913,7 @@ purple {
     position: relative;
     background-color: rgb(108, 95, 188);
     height: 10px;
-    width: 233px;
+    width: 100px;
     border-radius: 78.53px;
   }
 }
