--- a/firstProject/css/style.css
+++ b/firstProject/css/style.css
@@ -617,8 +617,8 @@ purple {
   background-color: rgb(255, 255, 255);
   padding: 30px 15px;
   border-radius: 30px;
-  -webkit-box-shadow: 6.8484177589px 82.1810150146px 41.0905075073px 0px rgba(229, 229, 229, 0.7);
-          box-shadow: 6.8484177589px 82.1810150146px 41.0905075073px 0px rgba(229, 229, 229, 0.7);
+  -webkit-box-shadow: 6.8px 82.2px 41px 0px rgba(229, 229, 229, 0.7);
+          box-shadow: 6.8px 82.2px 41px 0px rgba(229, 229, 229, 0.7);
   -webkit-transition: 0.3s ease-out;
   transition: 0.3s ease-out;
 }
@@ -770,19 +770,79 @@ purple {
   text-align: left;
   color: rgb(26, 32, 44);
 }
+.purchase__right-dropdown {
+  position: relative;
+}
 .purchase__right-select {
-  width: 175.91px;
-  height: 53.4px;
-  padding: 12.56px, 18.85px, 12.56px, 18.85px;
-  border-radius: 12.56px;
-  gap: 6.28px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 20px;
+  width: 175px;
+  height: 53px;
+  border-radius: 13px;
   background-color: rgb(250, 250, 250);
   font-size: 19px;
   font-weight: 600;
   line-height: 28px;
-  letter-spacing: 0.6282353401px;
-  text-align: left;
+  letter-spacing: 0.6px;
   color: rgb(26, 32, 44);
+  border: 2px solid rgb(108, 95, 188);
+}
+.purchase__right-select:hover {
+  cursor: pointer;
+}
+.purchase__right-caret {
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 6px solid rgb(108, 95, 188);
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+.purchase__right-caret-rotate {
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+.purchase__right-menu {
+  list-style: none;
+  margin-top: 5px;
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+  width: 100%;
+  background-color: white;
+  font-size: 19px;
+  font-weight: 600;
+  line-height: 28px;
+  letter-spacing: 0.6px;
+  border-radius: 13px;
+  border: 2px solid rgb(108, 95, 188);
+  z-index: 1;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+.purchase__right-menu li {
+  margin: 5px;
+  padding-left: 20px;
+  cursor: pointer;
+  border-radius: 10px;
+}
+.purchase__right-menu li:hover {
+  background-color: rgba(108, 95, 188, 0.4);
+}
+.purchase__right-active {
+  background-color: rgba(108, 95, 188, 0.8);
 }
 .purchase__right-main {
   padding-top: 38px;
