--- a/firstProject/css/style.scss
+++ b/firstProject/css/style.scss
@@ -562,8 +562,7 @@ purple {
       background-color: rgba(255, 255, 255, 1);
       padding: 30px 15px;
       border-radius: 30px;
-      box-shadow: 6.84841775894165px 82.18101501464844px 41.09050750732422px 0px
-        rgba(229, 229, 229, 0.7);
+      box-shadow: 6.8px 82.2px 41px 0px rgba(229, 229, 229, 0.7);
       transition: 0.3s ease-out;
 
       &:hover {
@@ -715,19 +714,77 @@ purple {
       color: rgba(26, 32, 44, 1);
     }
 
+    &-dropdown {
+      position: relative;
+    }
+
     &-select {
-      width: (175.91px);
-      height: (53.4px);
-      padding: 12.56px, 18.85px, 12.56px, 18.85px;
-      border-radius: 12.56px;
-      gap: 6.28px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 20px;
+      width: 175px;
+      height: 53px;
+      border-radius: 13px;
       background-color: rgba(250, 250, 250, 1);
       font-size: 19px;
       font-weight: 600;
       line-height: 28px;
-      letter-spacing: 0.6282353401184082px;
-      text-align: left;
+      letter-spacing: 0.6px;
       color: rgba(26, 32, 44, 1);
+      border: 2px solid rgb(108, 95, 188);
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    &-caret {
+      width: 0;
+      height: 0;
+      border-left: 5px solid transparent;
+      border-right: 5px solid transparent;
+      border-top: 6px solid rgb(108, 95, 188);
+      transition: 0.3s;
+
+      &-rotate {
+        transform: rotate(180deg);
+      }
+    }
+
+    &-menu {
+      list-style: none;
+      margin-top: 5px;
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 100%;
+      background-color: white;
+      font-size: 19px;
+      font-weight: 600;
+      line-height: 28px;
+      letter-spacing: 0.6px;
+      border-radius: 13px;
+      border: 2px solid rgb(108, 95, 188);
+      z-index: 1;
+      // opacity: 0;
+      // display: none;
+      transition: 0.3s;
+
+      & li {
+        margin: 5px;
+        padding-left: 20px;
+        cursor: pointer;
+        border-radius: 10px;
+
+        &:hover {
+          background-color: rgb(108, 95, 188, 0.4);
+        }
+      }
+    }
+
+    &-active {
+      background-color: rgb(108, 95, 188, 0.8);
     }
 
     &-main {
