file system and dropdown menu fixed

--- a/firstProject/css/menu/menu.css
+++ b/firstProject/css/menu/menu.css
@@ -385,9 +385,9 @@ purple {
   cursor: pointer;
 }
 .weekend__form img {
-  position: absolute;
+  position: relative;
   top: -10px;
-  left: 30px;
+  left: 40px;
 }
 
 .restaurants__header {
