--- a/firstProject/css/menu/menu.scss
+++ b/firstProject/css/menu/menu.scss
@@ -369,9 +369,9 @@ purple {
     }
 
     & img {
-      position: absolute;
+      position: relative;
       top: -10px;
-      left: 30px;
+      left: 40px;
     }
   }
 }
