--- a/firstProject/css/style.css
+++ b/firstProject/css/style.css
@@ -816,6 +816,7 @@ purple {
 .purchase__right-menu {
   list-style: none;
   margin-top: 5px;
+  padding: 5px;
   position: absolute;
   left: 50%;
   -webkit-transform: translateX(-50%);
@@ -840,11 +841,9 @@ purple {
   font-size: 19px;
   width: 100%;
   opacity: 1;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
 }
 .purchase__right-menu-open li {
-  margin: 5px;
+  margin-top: 5px;
   padding-left: 20px;
   cursor: pointer;
   border-radius: 10px;
@@ -892,7 +891,7 @@ purple {
   font-size: 19px;
   font-weight: 800;
   line-height: 28px;
-  letter-spacing: 0.6282353401px;
+  letter-spacing: 0.6px;
   text-align: left;
   color: rgb(26, 32, 44);
 }
@@ -900,7 +899,7 @@ purple {
   font-size: 16px;
   font-weight: 500;
   line-height: 24px;
-  letter-spacing: 0.6282353401px;
+  letter-spacing: 0.6px;
   text-align: left;
   color: rgb(160, 174, 192);
 }
@@ -911,7 +910,7 @@ purple {
   font-size: 22px;
   font-weight: 800;
   line-height: 33px;
-  letter-spacing: 0.3141176701px;
+  letter-spacing: 0.3px;
   text-align: right;
   color: rgb(26, 32, 44);
 }
@@ -946,7 +945,7 @@ purple {
   position: relative;
   background-color: rgb(108, 95, 188);
   height: 10px;
-  width: 380px;
+  width: 100%;
   border-radius: 78.53px;
 }
 
