slider fixed and ended + dropdown text added

--- a/firstProject/css/menu/menu.css
+++ b/firstProject/css/menu/menu.css
@@ -145,6 +145,49 @@ purple {
   color: rgb(172, 173, 185);
 }
 
+.notification {
+  display: none;
+  width: 300px;
+  height: 80px;
+  position: fixed;
+  bottom: 0;
+  left: 50px;
+  padding: 0 20px;
+  border-radius: 15px;
+  z-index: 9999;
+  background-color: rgb(108, 95, 188);
+  -webkit-animation-name: showNotification;
+          animation-name: showNotification;
+  -webkit-animation-duration: 0.4s;
+          animation-duration: 0.4s;
+}
+.notification-content {
+  text-align: center;
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  color: rgb(255, 243, 235);
+}
+
+@-webkit-keyframes showNotification {
+  from {
+    margin-bottom: -150px;
+  }
+  to {
+    margin-bottom: 50px;
+  }
+}
+
+@keyframes showNotification {
+  from {
+    margin-bottom: -150px;
+  }
+  to {
+    margin-bottom: 50px;
+  }
+}
 .header {
   position: fixed;
   top: 0px;
@@ -741,4 +784,8 @@ purple {
   display: -ms-flexbox;
   display: flex;
   gap: 50px;
+}
+
+.dropdownOpen {
+  display: block;
 }
