--- a/firstProject/css/menu/menu.scss
+++ b/firstProject/css/menu/menu.scss
@@ -143,6 +143,38 @@ purple {
   }
 }
 
+.notification {
+  display: none;
+  width: 300px;
+  height: 80px;
+  position: fixed;
+  bottom: 0;
+  left: 50px;
+  padding: 0 20px;
+  border-radius: 15px;
+  z-index: 9999;
+  background-color: rgba(108, 95, 188, 1);
+  animation-name: showNotification;
+  animation-duration: 0.4s;
+
+  &-content {
+    text-align: center;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    color: rgba(255, 243, 235, 1);
+  }
+}
+
+@keyframes showNotification {
+  from {
+    margin-bottom: -150px;
+  }
+  to {
+    margin-bottom: 50px;
+  }
+}
+
 .header {
   position: fixed;
   top: 0px;
@@ -718,4 +750,8 @@ purple {
       gap: 50px;
     }
   }
+}
+
+.dropdownOpen {
+  display: block;
 }
