--- a/firstProject/css/style.scss
+++ b/firstProject/css/style.scss
@@ -191,7 +191,6 @@ purple {
     align-items: center;
     margin-right: auto;
     margin-left: 105px;
-    margin-right: 445px;
 
     &-buttons {
       display: flex;
@@ -230,6 +229,9 @@ purple {
   }
 
   &__registration {
+    display: flex;
+    gap: 10px;
+
     &-link {
       text-decoration: none;
     }
@@ -308,7 +310,7 @@ purple {
     position: relative;
 
     &-card {
-      right: -222px;
+      right: -200px;
     }
 
     &-picture {
@@ -1104,6 +1106,170 @@ purple {
     &-buttons {
       display: flex;
       gap: 50px;
+    }
+  }
+}
+
+@media (max-width: 1450px) {
+  .container {
+    max-width: 80%;
+  }
+  .application__right-card {
+    right: -100px;
+  }
+}
+
+@media (max-width: 1250px) {
+  .application {
+    &__left {
+      width: 80%;
+
+      &-heading {
+        font-size: 60px;
+      }
+    }
+
+    &__right {
+      &-card {
+        width: 80%;
+      }
+      &-picture {
+        width: 90%;
+        & img {
+          width: 90%;
+        }
+      }
+    }
+  }
+
+  .features {
+    &__box {
+      height: 170px;
+    }
+
+    &__item {
+      gap: 0;
+      &-title {
+        font-size: 30px;
+      }
+      &-subtitle {
+        font-size: 15px;
+      }
+    }
+  }
+}
+
+@media (max-width: 900px) {
+  .application {
+    &__left {
+      &-heading {
+        font-size: 40px;
+        line-height: 60px;
+      }
+    }
+
+    &__right {
+      &-card {
+        width: 80%;
+      }
+      &-picture {
+        width: 90%;
+        & img {
+          width: 90%;
+        }
+      }
+    }
+  }
+
+  .features {
+    &__box {
+      height: 170px;
+    }
+
+    &__item {
+      gap: 0;
+      &-title {
+        font-size: 30px;
+      }
+      &-subtitle {
+        font-size: 15px;
+      }
+
+      &:nth-child(2) {
+        padding: 0 10px;
+      }
+    }
+  }
+
+  .mobile {
+    &__inner {
+    }
+
+    &__left {
+      & img {
+        width: 280px;
+      }
+    }
+
+    &__right {
+      &-title {
+        font-size: 40px;
+      }
+      &-list {
+        font-size: 16px;
+        gap: 10px;
+      }
+      &-more {
+        left: 0;
+      }
+    }
+  }
+}
+
+@media (max-width: 700px) {
+  .application {
+    &__inner {
+      flex-direction: column;
+    }
+
+    &__right {
+      margin-top: 40px;
+    }
+  }
+
+  .features {
+    &__box {
+      height: 170px;
+    }
+
+    &__item {
+      gap: 0;
+      &-title {
+        font-size: 24px;
+      }
+      &-subtitle {
+        font-size: 14px;
+      }
+
+      &:nth-child(2) {
+        padding: 0 10px;
+      }
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .application {
+    &__left {
+      &-rating {
+        justify-content: center;
+      }
+    }
+
+    &__right {
+      &-card {
+        right: 0;
+      }
     }
   }
 }
